@@ -231,6 +231,8 @@ Pino_0 = 'Pino'
 Pino_1 = _('Twitter and Identi.ca client')
 PowerTop_0 = 'PowerTop'
 PowerTop_1 = _('Help you save power for your laptop.')
+QBittorrent_0 = 'qBittorrent'
+QBittorrent_1 = _('Lightweight, featureful open source equivalent to utorrent')
 QCad_0 = 'QCad'
 QCad_1 = _('Open source substitution of AutoCAD')
 QT_Creator_0 = _('Qt Creator')
