@@ -4,6 +4,8 @@
     * Add wxmaxima, a Computer Algebra System.
     * Add scilab, one of several open source alternatives to MATLAB.
     * Add rkward, A graphic user interface to the R programming language.
+    * Add qBittorrent, featureful open source equivalent to utorrent.
+    * Add DeaDBeeF, ultimate music player.
 
 2010-07-21 Homer Xing <homer.xing@gmail.com>
 
